src/objects/VartopiaDRS__Field_ID_Configuration_Con__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>VartopiaDRS__Destination_Object_FieldID__c</fullName>
        <label>Destination Object FieldID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Destination_Object_FieldName__c</fullName>
        <label>Destination Object FieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Destination_Object_FieldType__c</fullName>
        <label>Destination Object FieldType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Destination_Object_Name__c</fullName>
        <label>Destination Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Registration_FieldName__c</fullName>
        <label>Registration FieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Field ID Configuration Con</label>
</CustomObject>